[package]
name = "koauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
lazy_static = "1.4.0"
sqlx = { version = "0.6.3", features = ["postgres", "macros"] }
tokio = "1.28.2"
