[package]
name = "koauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async_once = "0.2.6"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
lazy_static = "1.4.0"
num-traits = "0.2.15"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "macros", "runtime-tokio-native-tls", "bigdecimal"] }
tokio = { version = "1.28.2", features = ["full"] }

kostats-web = { git = "https://github.com/AMTitan/Kostats", optional = true }

[features]
default = ["stats"]
stats = ["dep:kostats-web"]
